# Bloomfield-Screening-Dashboard

./: .bf-default.css  .bf-home.css  .bloomfield.html  .gitignore  README.md  SUPABASE_SETUP.md
.claude/: settings.local.json
backend/: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  pyproject.toml  requirements.txt
backend/app/: __init__.py  main.py
backend/app/agents/: __init__.py  base.py  demo.py  document_processing.py  email_composition.py  email_triage.py  financial_extraction.py  market_research.py  orchestrator.py  screener_generator.py  summarize.py  underwriting_analysis.py
backend/app/api/routes/: auth.py  deals.py  emails.py  screened.py  settings.py  uploads.py
backend/app/core/: config.py  logging.py  security.py  token_store.py
backend/app/integrations/: claude.py  gmail.py  supabase.py
backend/app/models/: deal.py  email.py  user.py
backend/app/schemas/: deal.py  email.py  settings.py
backend/app/services/: deal_service.py  document_service.py  email_service.py  screener_service.py
backend/templates/: README.md
docs/: README.md
frontend/: .env.example  .gitignore  Dockerfile  README.md  index.html  nginx.conf  package-lock.json  tailwind.config.ts
frontend/.lovable/: plan.md
frontend/src/: App.tsx  index.css
supabase/migrations/: 0001_initial.sql  0002_gmail_tokens.sql  0003_deals_extended_schema.sql  0004_user_id_text_compat.sql  0005_fix_emails_unique_constraint.sql  0006_screened_emails_queue.sql  0007_deal_financial_detail_fields.sql  0008_multi_user_data_migration.sql  0009_screened_emails_text_compat.sql  (+2 more)
(+20 files in other folders)
