[project]
name = "bloomfield-deal-screener-backend"
version = "0.1.0"
description = "FastAPI backend + agentic AI framework for Bloomfield Capital's Deal Screening Dashboard"
readme = "README.md"
requires-python = ">=3.11"

dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "pydantic>=2.8.0",
    "pydantic-settings>=2.4.0",
    "python-dotenv>=1.0.1",
    "httpx>=0.27.0",
    "anthropic>=0.39.0",
    "supabase>=2.8.0",
    "google-api-python-client>=2.140.0",
    "google-auth>=2.33.0",
    "google-auth-oauthlib>=1.2.1",
    "google-auth-httplib2>=0.2.0",
    "openpyxl>=3.1.5",
    "xlsxwriter>=3.2.0",
    "pymupdf>=1.24.10",
    "pdfplumber>=0.11.4",
    "python-multipart>=0.0.9",
    "tenacity>=9.0.0",
    "structlog>=24.4.0",
    "boto3>=1.34.0",
    "lxml>=5.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=5.0.0",
    "ruff>=0.6.0",
    "mypy>=1.11.0",
    "types-requests",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B", "UP", "N", "ASYNC"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
